--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT = 7778
+PORT = 9999
 MONGO_URI = mongodb+srv://Zainab:jafari123@kyh22.bzdnith.mongodb.net/webbshop?retryWrites=true&w=majority
+SECRET_KEY = hello90909090
